# QGIS

.externalToolBuilders/: make.launch
src/plugins/: CMakeLists.txt
src/plugins/least_cost_path/: CMakeLists.txt  README  leastcostpath.cpp  leastcostpath.h  leastcostpath.qrc  leastcostpathgui.cpp  leastcostpathgui.h  leastcostpathguibase.ui  leastcostpathguibase.ui_backup  testclass.cpp  testclass.h
src/plugins/least_cost_path/src/: Coords.cpp  lcpc.cpp  lcpfinder.cpp  lcpfinder.h
